--- a/index.html
+++ b/index.html
@@ -41,60 +41,60 @@
 			<div class="grid-17 grid-default">17h - 18h</div>
 			<div class="grid-18 grid-default">18h - 19h</div>
 			<div class="grid-12b"></div>
-			<div class="grid-9 grid-cursor grid-bord2" id="mon9">Cours 1<br>Debutant</div>
-			<div class="grid-10 grid-cursor grid-bord2" id="mon10">Cours 2<br>Debutant</div>
-			<div class="grid-11 grid-cursor grid-bord2" id="mon11">Cours 3<br>Debutant</div>
-			<div class="grid-13 grid-cursor grid-bord2" id="mon13">Cours 5<br>Debutant</div>
-			<div class="grid-14 grid-cursor grid-bord2" id="mon14">Cours 6<br>Debutant</div>
-			<div class="grid-15 grid-cursor grid-bord2" id="mon15">Cours 7<br>Debutant</div>
-			<div class="grid-16 grid-cursor grid-bord2" id="mon16">Cours 8<br>Debutant</div>
-			<div class="grid-17 grid-cursor grid-bord2" id="mon17">Cours 9<br>Debutant</div>
-			<div class="grid-18 grid-cursor grid-bord2" id="mon18">Cours 10<br>Debutant</div>
-			<div class="grid-9 grid-cursor grid-bord2" id="tue9">Cours 1<br>Debutant</div>
-			<div class="grid-10 grid-cursor grid-bord2" id="tue10">Cours 2<br>Debutant</div>
-			<div class="grid-11 grid-cursor grid-bord2" id="tue11">Cours 3<br>Debutant</div>
-			<div class="grid-13 grid-cursor grid-bord2" id="tue13">Cours 5<br>Debutant</div>
-			<div class="grid-14 grid-cursor grid-bord2" id="tue14">Cours 6<br>Debutant</div>
-			<div class="grid-15 grid-cursor grid-bord2" id="tue15">Cours 7<br>Debutant</div>
-			<div class="grid-16 grid-cursor grid-bord2" id="tue16">Cours 8<br>Debutant</div>
-			<div class="grid-17 grid-cursor grid-bord2" id="tue17">Cours 9<br>Debutant</div>
-			<div class="grid-18 grid-cursor grid-bord2" id="tue18">Cours 10<br>Debutant</div>
-			<div class="grid-9 grid-cursor grid-bord2" id="wed9">Cours 1<br>Debutant</div>
-			<div class="grid-10 grid-cursor grid-bord2" id="wed10">Cours 2<br>Debutant</div>
-			<div class="grid-11 grid-cursor grid-bord2" id="wed11">Cours 3<br>Debutant</div>
-			<div class="grid-13 grid-cursor grid-bord2" id="wed13">Cours 5<br>Debutant</div>
-			<div class="grid-14 grid-cursor grid-bord2" id="wed14">Cours 6<br>Debutant</div>
-			<div class="grid-15 grid-cursor grid-bord2" id="wed15">Cours 7<br>Debutant</div>
-			<div class="grid-16 grid-cursor grid-bord2" id="wed16">Cours 8<br>Debutant</div>
-			<div class="grid-17 grid-cursor grid-bord2" id="wed17">Cours 9<br>Debutant</div>
-			<div class="grid-18 grid-cursor grid-bord2" id="wed18">Cours 10<br>Debutant</div>
-			<div class="grid-9 grid-cursor grid-bord2" id="thu9">Cours 1<br>Debutant</div>
-			<div class="grid-10 grid-cursor grid-bord2" id="thu10">Cours 2<br>Debutant</div>
-			<div class="grid-11 grid-cursor grid-bord2" id="thu11">Cours 3<br>Debutant</div>
-			<div class="grid-13 grid-cursor grid-bord2" id="thu13">Cours 5<br>Debutant</div>
-			<div class="grid-14 grid-cursor grid-bord2" id="thu14">Cours 6<br>Debutant</div>
-			<div class="grid-15 grid-cursor grid-bord2" id="thu15">Cours 7<br>Debutant</div>
-			<div class="grid-16 grid-cursor grid-bord2" id="thu16">Cours 8<br>Debutant</div>
-			<div class="grid-17 grid-cursor grid-bord2" id="thu17">Cours 9<br>Debutant</div>
-			<div class="grid-18 grid-cursor grid-bord2" id="thu18">Cours 10<br>Debutant</div>
-			<div class="grid-9 grid-cursor grid-bord2" id="fri9">Cours 1<br>Debutant</div>
-			<div class="grid-10 grid-cursor grid-bord2" id="fri10">Cours 2<br>Debutant</div>
-			<div class="grid-11 grid-cursor grid-bord2" id="fri11">Cours 3<br>Debutant</div>
-			<div class="grid-13 grid-cursor grid-bord2" id="fri13">Cours 5<br>Debutant</div>
-			<div class="grid-14 grid-cursor grid-bord2" id="fri14">Cours 6<br>Debutant</div>
-			<div class="grid-15 grid-cursor grid-bord2" id="fri15">Cours 7<br>Debutant</div>
-			<div class="grid-16 grid-cursor grid-bord2" id="fri16">Cours 8<br>Debutant</div>
-			<div class="grid-17 grid-cursor grid-bord2" id="fri17">Cours 9<br>Debutant</div>
-			<div class="grid-18 grid-cursor grid-bord2" id="fri18">Cours 10<br>Debutant</div>
-			<div class="grid-9 grid-cursor grid-bord2" id="sat9">Cours 1<br>Debutant</div>
-			<div class="grid-10 grid-cursor grid-bord2" id="sat10">Cours 2<br>Debutant</div>
-			<div class="grid-11 grid-cursor grid-bord2" id="sat11">Cours 3<br>Debutant</div>
-			<div class="grid-13 grid-cursor grid-bord2" id="sat13">Cours 5<br>Debutant</div>
-			<div class="grid-14 grid-cursor grid-bord2" id="sat14">Cours 6<br>Debutant</div>
-			<div class="grid-15 grid-cursor grid-bord2" id="sat15">Cours 7<br>Debutant</div>
-			<div class="grid-16 grid-cursor grid-bord2" id="sat16">Cours 8<br>Debutant</div>
-			<div class="grid-17 grid-cursor grid-bord2" id="sat17">Cours 9<br>Debutant</div>
-			<div class="grid-18 grid-cursor grid-bord2" id="sat18">Cours 10<br>Debutant</div>
+			<div class="grid-9 grid-cursor grid-bord2" id="mon9"><img src="images/c1d.png" class="grid-dog" alt="cours" id="mon9i"></div>
+			<div class="grid-10 grid-cursor grid-bord2" id="mon10"><img src="images/c2c.png" class="grid-dog" alt="cours" id="mon10i"></div>
+			<div class="grid-11 grid-cursor grid-bord2" id="mon11"><img src="images/c3i.png" class="grid-dog" alt="cours" id="mon11i"></div>
+			<div class="grid-13 grid-cursor grid-bord2" id="mon13"><img src="images/c4d.png" class="grid-dog" alt="cours" id="mon13i"></div>
+			<div class="grid-14 grid-cursor grid-bord2" id="mon14"><img src="images/c5d.png" class="grid-dog" alt="cours" id="mon14i"></div>
+			<div class="grid-15 grid-cursor grid-bord2" id="mon15"><img src="images/c1d.png" class="grid-dog" alt="cours" id="mon15i"></div>
+			<div class="grid-16 grid-cursor grid-bord2" id="mon16"><img src="images/c1d.png" class="grid-dog" alt="cours" id="mon16i"></div>
+			<div class="grid-17 grid-cursor grid-bord2" id="mon17"><img src="images/c1d.png" class="grid-dog" alt="cours" id="mon17i"></div>
+			<div class="grid-18 grid-cursor grid-bord2" id="mon18"><img src="images/c1d.png" class="grid-dog" alt="cours" id="mon18i"></div>
+			<div class="grid-9 grid-cursor grid-bord2" id="tue9"><img src="images/c1d.png" class="grid-dog" alt="cours" id="tue9i"></div>
+			<div class="grid-10 grid-cursor grid-bord2" id="tue10"><img src="images/c1d.png" class="grid-dog" alt="cours" id="tue10i"></div>
+			<div class="grid-11 grid-cursor grid-bord2" id="tue11"><img src="images/c1d.png" class="grid-dog" alt="cours" id="tue11i"></div>
+			<div class="grid-13 grid-cursor grid-bord2" id="tue13"><img src="images/c1d.png" class="grid-dog" alt="cours" id="tue13i"></div>
+			<div class="grid-14 grid-cursor grid-bord2" id="tue14"><img src="images/c3c.png" class="grid-dog" alt="cours" id="tue14i"></div>
+			<div class="grid-15 grid-cursor grid-bord2" id="tue15"><img src="images/c1d.png" class="grid-dog" alt="cours" id="tue15i"></div>
+			<div class="grid-16 grid-cursor grid-bord2" id="tue16"><img src="images/c1d.png" class="grid-dog" alt="cours" id="tue16i"></div>
+			<div class="grid-17 grid-cursor grid-bord2" id="tue17"><img src="images/c5i.png" class="grid-dog" alt="cours" id="tue17i"></div>
+			<div class="grid-18 grid-cursor grid-bord2" id="tue18"><img src="images/c1d.png" class="grid-dog" alt="cours" id="tue18i"></div>
+			<div class="grid-9 grid-cursor grid-bord2" id="wed9"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed9i"></div>
+			<div class="grid-10 grid-cursor grid-bord2" id="wed10"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed10i"></div>
+			<div class="grid-11 grid-cursor grid-bord2" id="wed11"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed11i"></div>
+			<div class="grid-13 grid-cursor grid-bord2" id="wed13"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed13i"></div>
+			<div class="grid-14 grid-cursor grid-bord2" id="wed14"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed14i"></div>
+			<div class="grid-15 grid-cursor grid-bord2" id="wed15"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed15i"></div>
+			<div class="grid-16 grid-cursor grid-bord2" id="wed16"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed16i"></div>
+			<div class="grid-17 grid-cursor grid-bord2" id="wed17"><img src="images/c0.png" class="grid-dog" alt="cours" id="wed17i"></div>
+			<div class="grid-18 grid-cursor grid-bord2" id="wed18"><img src="images/c1d.png" class="grid-dog" alt="cours" id="wed18i"></div>
+			<div class="grid-9 grid-cursor grid-bord2" id="thu9"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu9i"></div>
+			<div class="grid-10 grid-cursor grid-bord2" id="thu10"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu10i"></div>
+			<div class="grid-11 grid-cursor grid-bord2" id="thu11"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu11i"></div>
+			<div class="grid-13 grid-cursor grid-bord2" id="thu13"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu13i"></div>
+			<div class="grid-14 grid-cursor grid-bord2" id="thu14"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu14i"></div>
+			<div class="grid-15 grid-cursor grid-bord2" id="thu15"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu15i"></div>
+			<div class="grid-16 grid-cursor grid-bord2" id="thu16"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu16i"></div>
+			<div class="grid-17 grid-cursor grid-bord2" id="thu17"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu17i"></div>
+			<div class="grid-18 grid-cursor grid-bord2" id="thu18"><img src="images/c1d.png" class="grid-dog" alt="cours" id="thu18i"></div>
+			<div class="grid-9 grid-cursor grid-bord2" id="fri9"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri9i"></div>
+			<div class="grid-10 grid-cursor grid-bord2" id="fri10"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri10i"></div>
+			<div class="grid-11 grid-cursor grid-bord2" id="fri11"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri11i"></div>
+			<div class="grid-13 grid-cursor grid-bord2" id="fri13"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri13i"></div>
+			<div class="grid-14 grid-cursor grid-bord2" id="fri14"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri14i"></div>
+			<div class="grid-15 grid-cursor grid-bord2" id="fri15"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri15i"></div>
+			<div class="grid-16 grid-cursor grid-bord2" id="fri16"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri16i"></div>
+			<div class="grid-17 grid-cursor grid-bord2" id="fri17"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri17i"></div>
+			<div class="grid-18 grid-cursor grid-bord2" id="fri18"><img src="images/c1d.png" class="grid-dog" alt="cours" id="fri18i"></div>
+			<div class="grid-9 grid-cursor grid-bord2" id="sat9"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat9i"></div>
+			<div class="grid-10 grid-cursor grid-bord2" id="sat10"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat10i"></div>
+			<div class="grid-11 grid-cursor grid-bord2" id="sat11"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat11i"></div>
+			<div class="grid-13 grid-cursor grid-bord2" id="sat13"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat13i"></div>
+			<div class="grid-14 grid-cursor grid-bord2" id="sat14"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat14i"></div>
+			<div class="grid-15 grid-cursor grid-bord2" id="sat15"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat15i"></div>
+			<div class="grid-16 grid-cursor grid-bord2" id="sat16"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat16i"></div>
+			<div class="grid-17 grid-cursor grid-bord2" id="sat17"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat17i"></div>
+			<div class="grid-18 grid-cursor grid-bord2" id="sat18"><img src="images/c1d.png" class="grid-dog" alt="cours" id="sat18i"></div>
 		</div>
 	</div>
 </body>
@@ -107,9 +107,12 @@
 	var today_day = today.getDay();
 
 	var hours = [9,10,11,13,14,15,16,17,18];
-	var cours_test = ['Cours 1','Cours 2','Cours 3','Cours 5','Cours 6','Cours 7','Cours 8','Cours 9','Cours 10'];
-	var cours_col = ['red','navy','green','purple','pink','orange','saddlebrown','cyan','teal'];
-	var niveau = ['Debutant','Intermediaire','Expert'];
+	var cours_test = ['c1','c2','c3','c4','c5'];
+	var cours_test2 = ['Treibball','Agility','Flyball','Hooper','Education'];
+	var cours_col = ['red','navy','green','purple'];
+	var niveau = ['d','i','c'];
+	var niveau2 = ['Débutant','Intermédiaire','Concours'];
+
 
 	var selected = new Array(54);
 	for (var i = 0; i < selected.length; i++) {
@@ -189,19 +192,31 @@
 	});
 
 	function changecol(){
-		for (var i = 0; i < days.length; i++) {
-			for (var j = 0; j < hours.length; j++) {
-				if (this.id == days[i] + hours[j]) {
-					var num = 9 * i + (j + 1);
-					if (selected[num-1] == 0) {
-						selected[num-1] = 1;
-						this.style.backgroundColor = 'black';
-					} else {
-						selected[num-1] = 0;
-						this.style.backgroundColor = 'ghostwhite';
+		var idim = this.id + 'i';
+		var estvide = document.getElementById(idim).src.slice(-6);
+		if (estvide != 'c0.png') {
+			for (var i = 0; i < days.length; i++) {
+				for (var j = 0; j < hours.length; j++) {
+					if (this.id == days[i] + hours[j]) {
+						var num = 9 * i + (j + 1);
+						var idimsrc = document.getElementById(idim).src.slice(-8);
+						idimsrc = idimsrc.replace('/','');
+						if (selected[num-1] == 0) {
+							selected[num-1] = 1;
+							this.style.backgroundColor = '#444444';
+							idimsrc = idimsrc.replace('.png','1.png');
+							idimsrc = 'images/' + idimsrc;
+							document.getElementById(idim).src = idimsrc;
+						} else {
+							selected[num-1] = 0;
+							this.style.backgroundColor = 'ghostwhite';
+							idimsrc = idimsrc.replace('1.png','.png');
+							idimsrc = 'images/' + idimsrc;
+							document.getElementById(idim).src = idimsrc;
+						}
+						i = days.length;
+						j = hours.length;
 					}
-					i = days.length;
-					j = hours.length;
 				}
 			}
 		}
@@ -231,13 +246,25 @@
 			var days_date = date_new(today,i,today_day);
 			document.getElementById(days[i]).innerHTML = days_text[i] + "<br>" + date_return(days_date);
 			for (var j = 0; j < hours.length; j++) {
-				var dh = '#' + days[i] + hours[j];
-				var valtest = $(dh).text();
+				var dh = days[i] + hours[j] + 'i';
+				var valtest = document.getElementById(dh).src.slice(-8);
+				valtest = valtest.replace('/','');
+				valtest = valtest.replace('1.png','');
+				valtest = valtest.replace('.png','');
+				var nonvide = 1;
 				for (var k = 0; k < cours_test.length; k++) {
 					if ((valtest == (cours_test[k] + niveau[0]))||(valtest == (cours_test[k] + niveau[1]))||(valtest == (cours_test[k] + niveau[2]))) {
-						document.getElementById(days[i] + hours[j]).style.color = cours_col[k];
+						document.getElementById(dh).alt = cours_test2[k];
+						nonvide = 1;
+						k = cours_test.length;
+					} else {
+						nonvide = 0;
 					}
-				}					
+				}
+				if (nonvide == 0) {
+					document.getElementById(dh).alt = '';
+					document.getElementById(days[i] + hours[j]).style.cursor = 'default';
+				}
 			}
 		}
 	}
