--- a/calendrier.html
+++ b/calendrier.html
@@ -155,7 +155,7 @@
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
 		<div class="container">
 			<ul class="navbar-nav">
-				<li class="nav-item"><a class="nav-link" href="mentions-legales" title="Mentions">Mentions légales</a></li>
+				<li class="nav-item" id="mentleg"><a class="nav-link" href="mentions-legales" title="Mentions">Mentions légales</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -226,6 +226,7 @@
 			document.getElementById(menu_nav[i]).onmouseover = function(){this.style.color = "black";};
 			document.getElementById(menu_nav[i]).onmouseout = function(){this.style.color = "rgba(255,255,255,0.5)";};
 		}
+		document.getElementById('mentleg').style.backgroundColor = 'transparent';
 	});
 
 	window.addEventListener('resize', function() {
